# resume-forge

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: feishu-notify.yml
backend/: Dockerfile  Dockerfile.bak  pyproject.toml  requirements.txt
backend/app/: config.py  data_store.py  database.py  main.py  model_config.py
backend/app/auth/: auth_router.py  auth_utils.py
backend/app/engines/: info_extractor.py  optimize_engine.py
backend/app/models/: __init__.py  api_key.py  info_entry.py  job_analysis.py  job_analysis.py.bak-20260611-1328  quality_review.py  resume_version.py  system_config.py  user.py
backend/app/routers/: config.py  config.py.bak-20260611-0630  info.py  info.py.bak  info.py.bak2  jobs.py  jobs.py.bak-20260611-1328  resumes.py  resumes.py.bak  resumes.py.bak-20260611-1328  resumes.py.bak-20260611065202  resumes.py.bak.20260611072330  reviews.py  reviews.py.bak  reviews.py.bak2  upload.py  upload.py.bak
backend/app/services/: analysis_engine.py  dedup_engine.py  enterprise_research.py  extract_engine.py  extract_engine.py.bak  generate_engine.py  generate_engine.py.bak-20260611-1328  generate_engine.py.bak-20260611070419  review_engine.py
data/: init.sql
frontend/: Dockerfile  index.html  nginx.conf  nginx.conf.bak  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  App.vue.bak  App.vue.bak-20260611-143835  App.vue.bak2  App.vue.bak3  App.vue.bak4  main.ts
frontend/src/api/: client.ts  info.ts  jobs.ts  resume.ts  review.ts
frontend/src/assets/: main.css  (+1 more)
images/: README.md
(+18 files in other folders)
