[project]
name = "resume-forge-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "instructor>=1.3.0",
    "openai>=1.30.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.0",
    "pgvector>=0.3.0",
    "ruff>=0.4.0",
]
